--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "nuxt",
+    "dev:lan": "nuxt --hostname '0.0.0.0' --port 8000",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
