--- a/src/client/package.json
+++ b/src/client/package.json
@@ -12,7 +12,13 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "nuxt": "^3.1.2"
+    "nuxt": "^3.1.2",
+    "sass": "^1.58.0"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "@mdi/font": "^7.1.96",
+    "@oruga-ui/oruga-next": "^0.5.10",
+    "@oruga-ui/theme-bulma": "^0.2.8"
+  }
 }
