--- a/src/client/package.json
+++ b/src/client/package.json
@@ -15,6 +15,7 @@
     "@astrojs/vue": "^3.0.2",
     "@ntohq/buefy-next": "^0.1.2",
     "astro": "^3.4.0",
+    "astro-icon": "^0.8.1",
     "autoprefixer": "^10.4.16",
     "sass": "^1.69.5",
     "sharp": "^0.32.6",
