--- a/package.json
+++ b/package.json
@@ -1,12 +1,41 @@
 {
-  "name": "mvmdesigner",
+  "name": "client",
   "version": "1.0.0",
-  "description": "mvmdesigner freelance website",
-  "repository": "https://github.com/mvmdesigner/mvmdesigner.com.git",
-  "author": "Wesley Ford @wesdevpro <wes@wesdev.pro>",
-  "license": "MIT",
   "private": true,
-  "workspaces": [
-    "packages/*"
-  ]
+  "scripts": {
+    "dev": "nuxt",
+    "dev:lan": "nuxt --hostname '0.0.0.0' --port 8000",
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "generate": "nuxt generate",
+    "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
+    "lint:prettier": "prettier --check .",
+    "lint": "yarn lint:js && yarn lint:prettier",
+    "lintfix": "prettier --write --list-different . && yarn lint:js --fix"
+  },
+  "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/fontawesome": "^1.1.2",
+    "core-js": "^3.19.3",
+    "nuxt": "^2.15.8",
+    "nuxt-buefy": "^0.4.13",
+    "vue": "^2.6.14",
+    "vue-server-renderer": "^2.6.14",
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^4.46.0"
+  },
+  "devDependencies": {
+    "@babel/eslint-parser": "^7.16.3",
+    "@nuxtjs/eslint-config": "^8.0.0",
+    "@nuxtjs/eslint-module": "^3.0.2",
+    "eslint": "^8.4.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-nuxt": "^3.1.0",
+    "eslint-plugin-vue": "^8.2.0",
+    "prettier": "^2.5.1",
+    "sass": "^1.51.0",
+    "sass-loader": "10.1.1"
+  }
 }
